fix project header does not fit

--- a/src/sass/elements/_project-header.scss
+++ b/src/sass/elements/_project-header.scss
@@ -6,7 +6,7 @@
   h2{
     color: $main-dark;
     margin: 0 auto;
-    width: 50%;
+    width: 70%;
     padding: 30px 0 35px;
     border-top: 1px solid $sc-amber-old;
     border-bottom: 1px solid $sc-amber-old;
